# rust-cilk-benchmarks

./: .gitignore
cilk/: .gitignore  Makefile  README.md  bench.c  bench_lib.c  bench_serial.c  bench_single.c  benchmark.sh  fib.c  fib_bench.c  fib_lib.c  fib_lib.h  pps_bench.c  pps_bench_lib.c  pps_bench_lib.h  pps_bench_serial.c  pps_bench_single.c  pps_test.c  prefix_sum.c  prefix_sum.h
rust/: .gitignore  Cargo.toml  benchmark.sh
rust/.cargo/: config.toml
rust/benches/: fib.rs  parallel_prefix_sum.rs
rust/src/: cilk.rs  common.rs  lib.rs  rayon.rs  serial.rs
rust/src/pps/: cilk.rs  common.rs  mod.rs  rayon.rs  serial.rs
